text Box Mio/bin/Debug/z_gramatica.txt
 0.Program = "class" ident PosDeclars "{" MethodDeclsOpc "}".
 1.PosDeclars =  .| Declaration  PosDeclars.
 2.Declaration = ConstDecl | VarDecl | ClassDecl.
 3.MethodDeclsOpc = . | MethodDecl MethodDeclsOpc.
 4.ConstDecl = "const" Type ident "=" NumberOrCharConst ";".
 5.NumberOrCharConst =  number | charConst ;
 6.VarDecl = Type  ident IdentifiersOpc ";".
 7.IdentifiersOpc =  . | "," ident IdentifiersOpc.
 8.MethodDecl = TypeOrVoid  ident "(" Pars ")" Block.
 9.TypeOrVoid  = Type | "void".
10.Pars = . | FormPar CommaFormParsOpc. 
11.CommaFormParsOpc =  . |  "," FormPar CommaFormParsOpc. 
12.Type	= ident  LbrackOpc.
13.LbrackOpc = . | "[" "]".
14.FormPars	=	 Type ident CommaTypeIdentOpc.
15.CommaTypeIdentOpc = . |"," Type ident .
16.Block = "{"  StatementsOpc "}".
17.StatementsOpc = . | PosDeclars StatementsOpc | Statement StatementsOpc.
18.Statement =	Designator RestOfStatement
	|	"if" "(" Condition ")" Statement ElseOpc
	|	"while" "(" Condition ")" Statement
	|	"break" ";"
	|	"return" [ Expr ] ";"
	|	"read" "(" Designator ")" ";"
	|	"write" "(" Expr "," Expr ")" ";".
	|	"writeln" "(" String_or_Expr ")" ";".
	|	Block
	|	";".
19.ActPars = Expr  OpcCommaExpr.
20.OpcCommaExpr = . |  "," Expr.
21.ElseOpc = . |  "else" Statement.
22.RestOfStatement = '=' Expr ';' | '('..')' ';' | '++' ';' | '--' ';'.
23.Expr = OpcMinus Term OpcAddOpTerms.
24.OpcMinus = . | "-".
25.OpcAddOpTerms  = . | AddOp Term.
26.Term = Factor  OpcMulOpFactors.
27.OpcMulopFactors = . |  MulOp Factor.
28.Factor = Designator OpcRestOfMethCall | number | "(" Expr ")".
29.OpcRestOfMethCall = . |  "(" OpcActPars ")" ].
30.OpcActPars = . | ActPars.
31.Designator = ident  opcRestOfDesignator.
32.opcRestOfDesignator =  . | '.' ident | '[' Expr ']' }.
33.Addop = '+' | '-'.
34.Mulop = '*' | '/' | '%'.
35.OpcExprBetweenBrack =  "[" Expr "]".
36.String_or_Expr = argstring | Expr.
