text Box Mio/Parser.cs
using System;
using System.Collections;
using System.IO;
using System.Reflection;
using System.Reflection.Emit;
//using at.jku.ssw.cc.tests;
using text_Box_Mio;
//using compilador;

namespace at.jku.ssw.cc
{
    public class ElemPilita
    {
        public enum ElemDePila { esEntero, esEstring };
        public int entero;
        public float flotante;
        public string estring;
        public ElemDePila elemDePila;
        public ElemPilita(int entero, string estring, ElemDePila elemDePila)
        { this.entero = entero; this.estring = estring; this.elemDePila = elemDePila; }
    }

    public class PilaMia : Pila
    {
        public PilaMia(int cantElem) : base(cantElem) { }

        public void mostrarPilita()
        {
            string pilaString = "";
            for (int i = this.cantMaxDeElem - 1; i >= 0; i--)
            {
                if (i > Parser.pilita.tope)

                    pilaString = pilaString + "\n" + " ";
                else
                {
                    string elemParaMostrar;
                    if (((ElemPilita)elementos[i]).elemDePila == ElemPilita.ElemDePila.esEntero)
                        elemParaMostrar = ((ElemPilita)elementos[i]).entero.ToString();
                    else elemParaMostrar = ((ElemPilita)elementos[i]).estring;
                    pilaString = pilaString + "\n" + elemParaMostrar;

                }
            }
            Program1.form1.richTextBox2.Text = pilaString;
            if (Parser.muestraCargaDeInstrs) Parser.MessageBoxCon2PregMaqVirtual();
        }

        public void inicializa()
        {
            for (int i = this.cantMaxDeElem - 1; i >= 0; i--)
            {
                elementos[i] = new ElemPilita(0, "", ElemPilita.ElemDePila.esEntero);
            }
        }

    }
    class Parser
    {
        public static FrmContinuar mens = new FrmContinuar();
        public static FrmContinuarMaqVirtual mensMaqVirtual = new FrmContinuarMaqVirtual();

        public static bool muestraProducciones = true;
        public static bool muestraCargaDeInstrs = true;
        public static bool ejecuta = false;

        public static PilaMia pilita = new PilaMia(10);

        public static void MessageBoxCon2PregMaqVirtual()
        {
            mensMaqVirtual.ShowDialog();
        }
        public static void MessageBoxCon3Preg(System.Windows.Forms.TreeNode ultimoNodo)
        {
            if (muestraProducciones)
            {
                //Program1.form1.instContinuar.ShowDialog();
                if (ultimoNodo.IsVisible == false) ultimoNodo.EnsureVisible();
                if (ultimoNodo.LastNode != null) ultimoNodo.LastNode.EnsureVisible();
            }
        }

        public static void MessageBoxCon3Preg()
        {
            if (muestraProducciones)
                Program1.form1.instContinuar.ShowDialog();
            Program1.form1.treeView1.ExpandAll();
        }//Fin MessageBoxCon3Preg()


        public enum AccionInstr
        {
            nop, loadLocal, storeLocal, add, sub, mul, div, pop,
            loadConst, write, writeln, branchInc, tJump, fJump, ldstr, ret
        }

        public class Instruccion
        {
            public AccionInstr accionInstr;
            public int nro;
            public int nroLinea;
            public string argDelWriteLine;
            public Code.BrfalseENUM indBrFalse;
            public Code.BrtrueENUM indBrTrue;
            public string instrString;


            public Instruccion(AccionInstr accionInstr, int nro, int nroLinea, string argDelWriteLine,
                               Code.BrtrueENUM indBrTrue, Code.BrfalseENUM indBrFalse, string instrString)
            {
                this.accionInstr = accionInstr; this.nro = nro;
                this.nroLinea = nroLinea; this.argDelWriteLine = argDelWriteLine;
                this.indBrTrue = indBrTrue; this.indBrFalse = indBrFalse; this.instrString = instrString;
            }
        }
        public static bool yaPintada = false;
        public const int maxnroDeInstrCorriente = 200;
        public static int nroDeInstrCorriente;
        public static Instruccion[] cil;
        static string[] namesAccionInstr = { "nop", "ldloc.", "stloc.", "add", "sub", "mul", "div", "pop",
                                         "ldc.i4 ", "write", "writeln", "br", "br_tJump" ,
                                         "br_fJuamp", "ldstr", "ret"};

        public static void inicializaCil()
        {
            cil = new Instruccion[maxnroDeInstrCorriente];
            for (int i = 0; i < maxnroDeInstrCorriente; i++)
                cil[i] = new Instruccion(AccionInstr.nop, 0, 0, "",
                                         Code.BrtrueENUM.BEQenum, Code.BrfalseENUM.BEQenum, "");
        }

        public static void muestraCil()
        {
            string todasLasInstrs = "Accion\tNro\tLinea";
            System.Windows.Forms.MessageBox.Show(maxnroDeInstrCorriente.ToString());

            for (int i = 0; i < maxnroDeInstrCorriente; i++)
            {
                todasLasInstrs = todasLasInstrs + "\n"
                                    + i.ToString() + ":"
                                    + namesAccionInstr[(int)cil[i].accionInstr] + "\t"
                                    + cil[i].nro.ToString() + "\t"
                                    + cil[i].nroLinea.ToString()
                                    + cil[i].argDelWriteLine;
            }
            Program1.form1.richTextBox5.Text = todasLasInstrs;
            System.Windows.Forms.MessageBox.Show("fin");
        }

        public const int maxCantVarsLocales = 10;
        public static int cantVarLocales;
        public static int[] locals = new int[maxCantVarsLocales];

        public static void muestraVarsLocales()
        {
            string todasLasVarsLocales;
            if (cantVarLocales == 0) todasLasVarsLocales = "No hay vars locales";
            else
            {
                todasLasVarsLocales = locals[0].ToString();
                for (int i = 1; i < cantVarLocales; i++)
                {
                    todasLasVarsLocales = todasLasVarsLocales + "\n" + locals[i].ToString();
                }
                Program1.form1.richTextBox4.Text = todasLasVarsLocales;
            }
        }

        static void ParteFinal1()
        {
            Type ptType1 = Code.program.CreateType();
            object ptInstance1 = Activator.CreateInstance(ptType1, new object[0]);
            ptType1.InvokeMember("Main", BindingFlags.InvokeMethod, null, ptInstance1, new object[0]);
            Code.assembly.Save("Piripipi" + ".exe");

            if (ZZ.readKey) Console.ReadKey();
        }//Fin ParteFinal1

        static void ReadKeyMio()
        {
            Code.il.EmitCall(OpCodes.Call, typeof(Console).GetMethod("Read", new Type[0]), null);
            Code.il.Emit(OpCodes.Conv_U2);
            Code.il.Emit(Code.POP);
        }

        public const int
            PROGRAM = 1, CONSTDECL = 2, VARDECL = 3, CLASSDECL = 4, METHODDECL = 5, FORMPARS = 6,
            TYPE = 7, STATEMENT = 8, BLOCK = 9, ACTPARS = 10, CONDITION = 11, CONDTERM = 12,
            CONDFACT = 13, EXPR = 14, TERM = 15, FACTOR = 16, DESIGNATOR = 17, RELOP = 18,
            ADDOP = 19, MULOP = 20, IDENT = 21;

        //static TextWriter output;
        public static Token token;    // last recognized token
        public static Token laToken;  // lookahead token (not yet recognized)
        static int la;         // shortcut to kind attribute of lookahead token (laToken.kind)

        /* Symbol table object of currently compiled method. */
        internal static Symbol curMethod;

        /* Special Label to represent an undefined break destination. */
        //static readonly Label undef;

        /* Reads ahead one symbol. */
        static void Scan()
        {
            token = laToken;
            laToken = Scanner.Next();
            //La 1° vez q se ejecuta, token queda con Token(1, 1), laToken con "class" (primer token del programa)
            la = laToken.kind;
        }

        /* Verifies symbol and reads ahead. */
        static void Check(int expected) //expected viene de la gramatica,  la del laToken que leyó
        {
            if (la == expected)
                Scan();
            else
                Errors.Error("Se esperaba un: " + Token.names[expected]);
        }

        static void Program()
        {
            System.Windows.Forms.TreeNode program = new System.Windows.Forms.TreeNode();  //Crea el nodo program
            program.Text = "Program"; //Texto del nodo "program"
            Program1.form1.treeView1.Nodes.Add(program); //"cuelga" el nodo (raiz) "program" del treeView1 ya creado
            Parser.MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(0);  //pinta de rojo    Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'.
            Parser.MessageBoxCon3Preg();
            program.Nodes.Add("class");
            program.ExpandAll(); //Visualiza (Expande) hijo de Program
            Parser.MessageBoxCon3Preg();
            //antes del Check (Token.CLASS), token = ...(1,1),  laToken = ..."class".. y la = Token.CLASS
            Check(Token.CLASS);   //class ProgrPpal
            //Se cumple que:  (la == expected) => ejecuta Scan => token = ..."class"... y laToden = ..."ProgrPpal" 
            Code.Colorear("token");   //colorea "class" en ventana de Edicion
            //"Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'."
            //Ya reconoció 'class', ahora va a reconocer ident
            program.Nodes.Add("ident");
            Parser.MessageBoxCon3Preg();
            Check(Token.IDENT); // "ProgrPpal" => debo insertar el token en la tabla de símbolos
            // es el comienzo del programa y abrir un nuevo alcance
            //Ahora token = "ProgrPpal" y laToken = "{"
            Code.Colorear("token");  //"class" ya lo pintó, ahora pinta "ProgrPpal"  (lo que hay en token)                                    
            Symbol prog = Tab.Insert(Symbol.Kinds.Prog, token.str, Tab.noType);//lo cuelga de universe
            Code.CreateMetadata(prog);
            Tab.OpenScope(prog); //topScore queda ahora apuntando a un nuevo Scope
            //El Scope anterior (universo) lo accedo via topScore.outer
            //Ya analizó Class ProgrPpal
            //Declaraciones (de ctes, de Globals(aunque diga de vars) y de clases) 
            //hasta q venga una "{"
            //"Program = 'class' ident PosDeclars '{' MethodDeclsOpc '}'."
            //Ya reconoció ident, ahora va a reconocer PosDeclars
            System.Windows.Forms.TreeNode posDeclars = new System.Windows.Forms.TreeNode("PosDeclars");
            program.Nodes.Add(posDeclars);  //Cuelga un TreeNode porque PosDeclars es No Terminal
            Parser.MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(1);  //"PosDeclars = . | Declaration PosDeclars.";
            Parser.MessageBoxCon3Preg();
            bool existeDecl = false;
            //"Declaration = ConstDecl | VarDecl | ClassDecl."
            while (la != Token.LBRACE && la != Token.EOF) //Si no existen declaraciones, la = Token.LBRACE
            {
                Code.Colorear("latoken"); //si existiera una declaracion, as "int i", colorea "int";  (yaPintado = true)
                //El argumento "false" => que no debe pintar el "token" (que en este caso seria "ProgrPpal"), sino el laToken (que es "int")
                //en este caso, debe "mirar hacia adelante" (laToken) 
                //para determinar la opcion de la produccion "PosDeclars = . | Declaration PosDeclars."    
                //Si laToken es "{" => la opcion es "PosDeclars = .", otherwise: "PosDeclars = Declaration PosDeclars."
                Code.seleccLaProdEnLaGram(2);
                System.Windows.Forms.TreeNode hijodeclar = new System.Windows.Forms.TreeNode("Declaration = ConstDecl | VarDecl | ClassDecl.");
                posDeclars.Nodes.Add(hijodeclar); existeDecl = true;
                switch (la)
                {
                    case Token.CONST:
                        {
                            ConstDecl(hijodeclar);
                            break;
                        }
                    case Token.IDENT:  //Type ident..
                        {
                            Code.cargaProgDeLaGram("Declaration = VarDecl.");
                            System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("Declaration = VarDecl.");
                            hijodeclar.Nodes.Add(hijo1);
                            Code.seleccLaProdEnLaGram(6);
                            Code.cargaProgDeLaGram("VarDecl = Type  ident IdentifiersOpc ';'.");
                            Code.seleccLaProdEnLaGram(12);
                            Code.cargaProgDeLaGram("Type = ident LbrackOpc."); //ya pintó el ident (por ej "int en int ii);
                            VardDecl(Symbol.Kinds.Global, hijo1); //En program  //Table val;
                            break;
                        }
                    case Token.CLASS:
                        {
                            ClassDecl();/*No se encuentra la gramatica para implementar declaracione de clases" */
                            break;
                        }
                    default:
                        {
                            token = laToken;
                            Errors.Error("Se esperaba Const, Tipo, Class");
                            break;
                        }
                }
                Code.seleccLaProdEnLaGram(1);
                Code.cargaProgDeLaGram("selccionó la 1 PosDeclars = . | Declaration PosDeclars.");
            }
            Code.Colorear("latoken");
            //en este caso, debe "mirar hacia adelante" (laToken) 
            //para determinar la opcion de la produccion "PosDeclars = . | Declaration PosDeclars."    
            //Si laToken es "{" => la opcion es "PosDeclars = .", otherwise: "PosDeclars = Declaration PosDeclars."
            if (!existeDecl)
            {
                posDeclars.Nodes.Add(".");
                posDeclars.ExpandAll(); //Visualiza (Expande) posDeclars
                Parser.MessageBoxCon3Preg();
            }
            if (ZZ.parser)
            {
                Console.WriteLine("Terminó con todas las declaraciones");
                Console.WriteLine("//el topScope queda apuntando a --> const size, class Table (con int[] pos y int[] neg), Table val");
            };
            if (ZZ.parser)
            {
                Console.WriteLine("empieza {"); if (ZZ.readKey) Console.ReadKey();
            }
            Check(Token.LBRACE);
            Code.Colorear("token");  //ya lo pinto
            Code.seleccLaProdEnLaGram(0);
            Parser.MessageBoxCon3Preg();
            program.Nodes.Add("'{'");
            Parser.MessageBoxCon3Preg();
            System.Windows.Forms.TreeNode methodDeclsOpc = new System.Windows.Forms.TreeNode("MethodDeclsOpc");
            program.Nodes.Add(methodDeclsOpc);
            Parser.MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(3);//3.MethodDeclsOpc = . | MethodDecl Meth
            Parser.MessageBoxCon3Preg();
            // si "la" pertenece a First(MethodDec) => sólo deben haber metodos
            while ((la == Token.IDENT || la == Token.VOID) && la != Token.EOF)
            {
                MethodDecl(methodDeclsOpc);  //void Main() int x,i; {val = new Table;....}
            }

            Check(Token.RBRACE);
            Code.Colorear("token");
            //////----------------------------------------------------------------Grupo 2 20/10/2015------------------------------------------------------
            MessageBoxCon3Preg(program);
            Code.seleccLaProdEnLaGram(0);
            program.Nodes.Add("}");
            //////----------------------------------------------------------------Grupo 2 20/10/2015------------------------------------------------------
            if (ZZ.parser)
            {
                Console.WriteLine("antes de prog.locals = Tab.topScope.locals; Tab.CloseScope()");
                if (ZZ.readKey)
                    Console.ReadKey();
            };
            prog.locals = Tab.topScope.locals;
            if (ZZ.parser)
            {
                Console.WriteLine("mostrarSymbol");
                prog.mostrarSymbol("");
                if (ZZ.readKey) Console.ReadKey();
            };
            Tab.CloseScope();
            Tab.mostrarTab();
            bool Depuracion = false;
            if (!Depuracion)
                ParteFinal1();
            if (ZZ.parser)
            {
                Console.WriteLine("despues de prog.locals = Tab.topScope.locals; Tab.CloseScope()");
                if (ZZ.readKey) Console.ReadKey();
                Tab.mostrarTab();
            };
        }//Fin Program

        static void ConstDecl(System.Windows.Forms.TreeNode padre)  /////MALLLL
        {
            System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("Declaration = ConstDecl.");
            padre.Nodes.Add(hijo1);
            System.Windows.Forms.TreeNode hijo2 = new System.Windows.Forms.TreeNode("ConstDecl = 'const' Type ident '=' NumberOrCharConst");
            hijo1.Nodes.Add(hijo2);
            Check(Token.CONST);  //const int i = 3;
            Code.Colorear("token");
            hijo2.Nodes.Add("'const'");
            Code.cargaProgDeLaGram("Declarations = Declaration Declarations.");
            Code.cargaProgDeLaGram("Declaration = ConstDecl.");
            //token=const  laToken=int
            Struct type;
            //= new Struct(Struct.Kinds.None); se podria haber hecho de 2 modos mas: ref y x valor
            // en ambos casos necesito Struct type = new...; 
            Type(out type); //En ConstDecl()  /
            hijo2.Nodes.Add("Type = " + type.kind.ToString());
            if (type != Tab.intType && type != Tab.charType)
            {
                Errors.Error("el tipo de una def de const sólo puede ser int o char");
            }
            Check(Token.IDENT);
            hijo2.Nodes.Add("ident");
            Code.Colorear("token");
            if (muestraProducciones) MessageBoxCon3Preg(); ;
            //token quedó con i, laToken con =
            // debo agregar a la tabla de símbolos un nuevo símbolo  
            Symbol constante = Tab.Insert(Symbol.Kinds.Const, token.str, type);
            if (ZZ.parser)
                Console.WriteLine("termina de insertar constante con type = " + type.kind);
            Check(Token.ASSIGN);  //const
            hijo2.Nodes.Add("'='");
            Code.Colorear("token"); if (muestraProducciones) MessageBoxCon3Preg();
            //token quedó con =, laToken con 10
            System.Windows.Forms.TreeNode hijo3 = new System.Windows.Forms.TreeNode("NumberOrCharConst");
            hijo2.Nodes.Add(hijo3);
            switch (la)
            {
                case Token.NUMBER:
                    {
                        if (type != Tab.intType) Errors.Error("type debe ser int");
                        Check(Token.NUMBER);
                        Code.Colorear("token");
                        ////
                        hijo3.Nodes.Add("number");
                        ////
                        if (muestraProducciones) MessageBoxCon3Preg();
                        constante.val = token.val;
                        break;
                    }
                case Token.CHARCONST:
                    {
                        if (type != Tab.charType) Errors.Error("type debe ser char");
                        Check(Token.CHARCONST);
                        hijo3.Nodes.Add("charConst");
                        Code.Colorear("token"); if (muestraProducciones) MessageBoxCon3Preg();
                        constante.val = token.val;
                        break;
                    }
                default:
                    {
                        Errors.Error("def de const erronea");
                        break;
                    }
            }
            if (ZZ.parser)
                Console.WriteLine("Ahora actualizó el valor");
            if (ZZ.parser)
                Tab.mostrarTab();
            Check(Token.SEMICOLON);
            Code.Colorear("token");
            hijo2.Nodes.Add("';'");
        }//Fin ConstDecl

        //-------------------------------------------------Grupo 2 28/9/2015-----------------------------------------------------------------------         
        public static void Identifieropc(System.Windows.Forms.TreeNode identifieropc, Struct type, Symbol.Kinds kind)//NUEVA FUNCION RECURSIVA QUE CUELGA LOS IDENTIFIEROPC
        {
            if (la == Token.COMMA && la != Token.EOF)
            {

                Scan();
                Code.Colorear("token");
                Code.cargaProgDeLaGram("IdentifiersOpc = ',' ident  IdentifiersOpc.");//deberia extender el arbol
                identifieropc.Nodes.Add("','");
                if (muestraProducciones)
                    MessageBoxCon3Preg();
                Check(Token.IDENT); //otro identif
                if (muestraProducciones)
                    MessageBoxCon3Preg();
                Code.Colorear("token");
                identifieropc.Nodes.Add("ident");
                MessageBoxCon3Preg();
                System.Windows.Forms.TreeNode identifieropc1 = new System.Windows.Forms.TreeNode("IdentifiersOpc");
                identifieropc.Nodes.Add(identifieropc1);
                //FGF INICIO 23/10
                cantVarLocales++;
                Symbol vble = Tab.Insert(kind, token.str, type);
                Code.CreateMetadata(vble);
                //FGF FIN  580 Identif
                Identifieropc(identifieropc1, type, kind);
            }
            else
            {
                MessageBoxCon3Preg();
                identifieropc.Nodes.Add(".");
                identifieropc.ExpandAll();
            }
        }//Fin Identifieropc

        //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
        static void VardDecl(Symbol.Kinds kind, System.Windows.Forms.TreeNode padre)
        {  //visto  //si es "int[] pos" y viene de "Class Tabla {", kind es "Field"
            // si es Tabla val y viene de "class P {", kind es "Global"
            Struct type;// = new Struct(Struct.Kinds.None); //int i;
            Code.seleccLaProdEnLaGram(6);
            if (muestraProducciones) MessageBoxCon3Preg();
            Code.cargaProgDeLaGram("VarDecl = Type  ident IdentifiersOpc ';'");
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            System.Windows.Forms.TreeNode hijo1 = new System.Windows.Forms.TreeNode("Type");//type
            padre.Nodes.Add(hijo1);
            padre.ExpandAll();
            MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(12);
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            Type(out type);  //En VardDecl
            //int[] en el caso del "int[] pos",... int, Table, Persona, int[], etc  
            //Table en el caso de Table val;
            //int en int x;
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            Code.Colorear("token");
            hijo1.Nodes.Add("ident");
            hijo1.ExpandAll();
            MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(12);
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            System.Windows.Forms.TreeNode lbrakopc = new System.Windows.Forms.TreeNode("LbrakeOpc");
            MessageBoxCon3Preg();
            hijo1.Nodes.Add(lbrakopc);
            Code.seleccLaProdEnLaGram(13);
            MessageBoxCon3Preg();
            Code.Colorear("latoken");
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            MessageBoxCon3Preg();
            lbrakopc.Nodes.Add(".");
            lbrakopc.ExpandAll();
            MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(12);
            MessageBoxCon3Preg();
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            Check(Token.IDENT); // "pos", en int pos,   .....int,....  x, i, etc
            Code.seleccLaProdEnLaGram(6);
            padre.Nodes.Add("ident");// Hace referencia a la x
            MessageBoxCon3Preg();
            Code.Colorear("token"); 
            System.Windows.Forms.TreeNode hijo2 = new System.Windows.Forms.TreeNode("IdentifiersOpc");
            padre.Nodes.Add(hijo2);
            //-------------------------------------------------Grupo 2 28/9/2015----------------------------------------------------------------------- 
            ////
            // debo insertar el token en la tabla de símbolos
            cantVarLocales++; //provisorio: esto deberia hacerlo solo para el caso de var locales (no para var globales)
            Symbol vble = Tab.Insert(kind, token.str, type);
            //vble no, poner simbolo (para pos, en int[] pos)
            //pues en este caso  es campo, y devuelve el Symbol p/pos,  type es int[]
            //puede ser val, en Tabla val, y type es Table //y devuelve el Symbol p/val
            Code.CreateMetadata(vble); //Para el campo pos (en int[] pos)Global, Field o .....  
            //o Para la vbe Global val
            //o para x en int x;
            Code.seleccLaProdEnLaGram(7);
            Identifieropc(hijo2, type, kind);
            Code.Colorear("latoken"); 
            Check(Token.SEMICOLON);
            MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(6);
            Code.Colorear("token");
            padre.Nodes.Add("';'");
            MessageBoxCon3Preg();
            Code.seleccLaProdEnLaGram(8);
            //-------------------------------------------------Grupo 2 28/9/2015-----------------------------------------------------------------------
            Code.cargaProgDeLaGram("IdentifiersOpc = .");
        }//Fin VardDecl

        static void ClassDecl()
        {
            Check(Token.CLASS); //class Table {int[] pos;int[] pos;},.. class C1 {int i; void P1(){}; char ch; int P2{}; int[] arr;  }
            Check(Token.IDENT); // "Table", laToken queda con "{"
            String nombreDeLaClase = token.str;//Table
            Struct StructParaLaClase = new Struct(Struct.Kinds.Class);
            //crear un Struct para la clase (con kind=Class)

            Check(Token.LBRACE); //"{"... laToken queda con "Table",...const    C1,  o  Table (en class Table)   
            Symbol nodoClase = Tab.Insert(Symbol.Kinds.Type, nombreDeLaClase, //crea symbol p/la clase Table
                                          StructParaLaClase);  //Con type=class
            Code.CreateMetadata(nodoClase);//crea clase Din p/Table (por ej.), 
            //queda apuntada por nodoClase.type.sysType
            // todas las variables que declaren son tipo FIELD, excepto las clases (anidadas)
            //class C1 { => int i,j; char ch; Pers p=new Pers(); int P2{}; int[] arr;  }
            //class Table { => int[] pos; int[] neg}
            //por ahora, no permitimos void P1 {};
            Tab.OpenScope(nodoClase);
            while (la != Token.RBRACE && la != Token.EOF)  //itera p/c/campo (pos)
            {
                switch (la)
                {
                    case Token.CONST:
                        ConstDecl(null);  //const int size = 10
                        break;
                    case Token.IDENT:
                        {
                            //Type ident.., por ej: int i, int[] pos, etc...
                            //deberia ser declaracion de campo (pues cuelga de una clase, no de un metodo)
                            VardDecl(Symbol.Kinds.Field, null); // P/distinguir campos de clases
                            //Lo que va a declarar (pos), va a ser un Symbol con kind "field"
                            //int[] pos;
                            break;
                        }
                    case Token.CLASS:
                        {
                            ClassDecl();
                            break;
                        }
                    default:
                        {
                            Errors.Error("Se esperaba Const, tipo, class");
                            break;
                        }
                }
            }
            //crear un Struct para la clase (con kind=Class)
            //Struct StructParaLaClase = new Struct(Struct.Kinds.Class);
            //hacer StructParaLaClase.fields = topScope.locals
            StructParaLaClase.fields = Tab.topScope.locals;
            Tab.CloseScope();  //con lo cual recuperamos topSScope
            Check(Token.RBRACE);   //laToken queda con Table (en Table ...)
            //class C1 { => int i,j; char ch; Pers p=new Pers(); int P2{}; int[] arr;  }
            // int i,j; char ch; Pers p..etc, quedó apuntado por topScope.locals
        }//Fin ClassDecl
